@@ -867,10 +867,6 @@ int dc1394_capture_get_fileno (dc1394camera_t * camera);
 dc1394error_t dc1394_capture_dequeue(dc1394camera_t * camera, dc1394capture_policy_t policy, dc1394video_frame_t **frame);
 dc1394error_t dc1394_capture_enqueue(dc1394camera_t * camera, dc1394video_frame_t * frame);
 
-/* Set the DMA device filename manually. In most cases this is not necessary because the capture
-   functions probe common filenames such as /dev/video1394/x or /dev/video1394. */
-dc1394error_t dc1394_capture_set_device_filename(dc1394camera_t* camera, char *filename);
-
 /***************************************************************************
      Format_7 (scalable image format)
  ***************************************************************************/
